# PyPlexos

./: .gitignore  README.md  pyproject.toml  view.txt
plexos/: binary.py  model.py  query.py  reader.py
pyplexos/: Protocols.py  main.py  query.py  reader.py  xml_model.py
pyplexos/inputs/: csv.py
pyplexos/model/: __init__.py  bin_model.py  duck_model.py  query.py  xml.py  xml_model.py
pyplexos/process/: __init__.py
pyplexos/query/: __init__.py
pyplexos/reader/: __init__.py  schema.py
pyplexos/reader/accdb/: __init__.py
pyplexos/reader/input/: __init__.py  csv.py  xml.py  xml_model.py
pyplexos/reader/zip/: __init__.py  bin_model.py  errors.py  xml_model.py  zip_reader.py
pyplexos/schema/: __init__.py
pyplexos/solution/: __init__.py  schema.py
pyplexos/solution/accdb/: __init__.py
pyplexos/solution/duckdb/: __init__.py
pyplexos/solution/schema/: plexos_v10.py  plexos_v9.py
pyplexos/solution/zip/: __init__.py  bin.py  xml.py
pyplexos/utils/duckdb/: silver.py
pyplexos/utils/duckdb/sql/: init_pcp_model.sql  init_pcp_solution.sql  temp.sql
pyplexos/writer/: __init__.py
pyplexos/writer/duckdb/: __init__.py  duck_writer.py  gold.py  silver.py
pyplexos/writer/duckdb/sql/: bronze.sql  init.sql  silver.sql
pyplexos/writer/model/: duck_writer.py  parquet_writer.py
pyplexos/writer/parquet/: __init__.py  parquet_writer.py
pyplexos/writer/schema/: duck_model.py  duck_model_v2.py
pyplexos/writer/schema/sql/: silver.sql
tests/inputs/: csv_test.py
tests/model/: xml_test.py
