[project]
name = "pyplexos"
version = "0.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "duckdb",
    "pydantic",
    "xmltodict",
    "pyarrow",
    "pendulum",
    "sqlalchemy-access",
    "pyarrow-stubs>=17.12",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ipykernel",
    "ipywidgets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
